# MBPriorQ-AE

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  environment.yml  validate.sh
artifact_appendix/: README.md  ae.tex  ae_body.tex  build.sh  build_submission.sh
docs/: AE_SCOPE.md  PROVENANCE.md  RELEASE_CHECKLIST.md  VALIDATION.md  ZENODO_RELEASE.md
environment/: README.md  software.yml
evidence/: README.md
experiments/: README.md
hardware/: README.md  env.sh  environment.yml  run_all.sh  run_modules.sh  run_system.sh  validate_results.py
metadata/: CITATION.cff.template  hotcrp_fields.md  release_files.sha256  source_manifest.json  zenodo.json.template
software/: README.md  pyproject.toml
software/mbpriorq_ae/: __init__.py  checkpoint.py  easy_quant_demo.py  ebw.py  integration.py  kv_cache.py  logging.py  mbpriorq.py  offload.py  perplexity.py  plotting.py  vmb_profiler.py
software/tests/: test_downstream_runner.py  test_ebw.py  test_integration.py  test_kv_cache.py  test_layer_smoke.py  test_offload.py  test_perplexity.py  test_quantization.py  test_smoke.py  test_validation.py
software/tools/: calibrate_activation_gradients.py  prepare_vmb_input_variations.py  prequantize_checkpoint.py  run_downstream_benchmark.py  run_streamed_layer_smoke.py  run_table2_ppl.py  run_wikitext_ppl.py  summarize_vmb_input_variations.py  validate_ablation_results.py  validate_backend_equivalence.py  validate_downstream_results.py  validate_feature_selection.py  validate_kv_cache_results.py  validate_ppl_results.py  validation_common.py
(+123 files in other folders)
