[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mbpriorq-ae"
version = "0.1.0"
description = "Curated MBPriorQ artifact-evaluation quantization primitives"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.0",
  "datasets>=3.0",
  "numpy",
  "safetensors",
  "torch",
  "transformers>=4.51",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mbpriorq_ae*"]
